added fluid mechanics rust crate for gnielinski friction factor calculation, test verified with correlation data from gnielinski's paper

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 approx = "0.5.1"
+fluid_mechanics_rust = { git = "https://github.com/theodoreOnzGit/fluid_mechanics_rust", version = "0.1.0" }
